--- a/index.html
+++ b/index.html
@@ -10,74 +10,176 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu&family=Open+Sans:ital@1&family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu&family=Open+Sans:ital@1&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Bengawan Solo</title>
   </head>
   <body>
     <nav
-    class="sticky-top navbar navbar-expand-md bg-dark-subtle navbar--color"
-    style="--bs-bg-opacity: 0.5"
-  >
-    <div class="container-fluid">
-      <a class="navbar-brand google-font" href="#"
-        ><i style="margin-right: 10px;" class="fa-solid fa-cake-candles"></i>Bengawan Solo</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="collapse navbar-collapse justify-content-end"
-        id="navbarNav"
-      >
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Stores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Career</a>
-          </li>
-        </ul>
+      class="sticky-top navbar navbar-expand-md bg-dark-subtle navbar--color"
+      style="--bs-bg-opacity: 0.5"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand google-font" href="#"
+          ><i style="margin-right: 10px" class="fa-solid fa-cake-candles"></i
+          >Bengawan Solo</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Stores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Career</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <section>
+      <video autoplay muted loop id="myVideo">
+        <source src="image/cake-video.mp4" type="video/mp4" />
+      </video>
+
+      <div class="product-info">
+        <div class="headline-one">A LITTLE SOMETHING FOR EVERY OCCASION</div>
+        <div class="sub-headline">
+          Delicate morsels of kueh, buttery cookies & tarts, to light as air &
+          decadent cakes for the most discerning palate.
+        </div>
+        <button
+          style="margin-top: 20px"
+          type="button"
+          class="btn btn-outline-danger"
+        >
+          EXPLORE ALL PRODUCTS
+        </button>
+      </div>
+    </section>
+
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-4 mt-5">
+          <div class="card" style="width: 100%">
+            <img src="image/chiffon.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Chiffon</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <div>Cost : $4</div>
+              <a href="#" class="btn btn-primary">Buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 mt-5">
+          <div class="card" style="width: 100%">
+            <img src="image/kueh.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Kueh</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <div>Cost : $4</div>
+              <a href="#" class="btn btn-primary">Buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 mt-5">
+          <div class="card" style="width: 100%">
+            <img src="image/product4.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Cake</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <div>Cost : $5</div>
+              <a href="#" class="btn btn-primary">Buy</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </nav>
 
-  <div>
-    <video autoplay muted loop id="myVideo">
-        <source src="image/cake-video.mp4" type="video/mp4" />
-    </video>  
+    <footer style="margin-top: 20px;">
+      <div class="card">
+        <div class="card-header">Contact Us</div>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="card-body col-sm-12 col-lg-6">
+              <p>
+                We love questions and feedback - and we’re always happy to help!
+              </p>
+              <p>Send us a message and we’ll respond soon.</p>
+              <p>
+                General Line: +65 6756 9088 Contact Email: sales@bengawansolo.sg
+              </p>
+            </div>
 
-    <div class="product-info">
-        <div class="headline-one">
-            A LITTLE SOMETHING FOR EVERY OCCASION
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31909.221143133906!2d103.70668117431637!3d1.3850352999999949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da11e999ce5671%3A0xef2ffef61f91e2be!2sBengawan%20Solo!5e0!3m2!1sen!2ssg!4v1683257450286!5m2!1sen!2ssg"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              class="col-sm-12 col-lg-6"
+            ></iframe>
+          </div>
         </div>
-        <div class="sub-headline">
-            Delicate morsels of kueh, buttery cookies & tarts, to light as air & decadent cakes for the most discerning palate.
+      </div>
+    </footer>
+
+    <!-- <section>
+    <div class="card" style="width: 18rem;">
+        <img src="image/chiffon.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-        <button style="margin-top: 20px;" type="button" class="btn btn-outline-danger">EXPLORE ALL PRODUCTS</button>
-    </div>
-  </div>
-  
+      </div>
+  </section> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
