--- a/index.html
+++ b/index.html
@@ -72,10 +72,28 @@
       </div>
     </nav>
 
+    
+
     <section>
       <video autoplay muted loop id="myVideo">
         <source src="image/cake-video.mp4" type="video/mp4" />
       </video>
+
+      <!-- add search bar -->
+    <div class="search-container">
+        <div class="card mx-5 my-3 " >
+            <div class="card-body">
+                <form class="row justify-content-center align-items-center">
+                    <div class="col-auto">
+                      <input type="password" class="form-control" id="inputPassword2" placeholder="Search item">
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary">Go</button>
+                    </div>
+                  </form>
+            </div>
+          </div>
+    </div>
 
       <div class="product-info">
         <div class="headline-one">A LITTLE SOMETHING FOR EVERY OCCASION</div>
@@ -92,6 +110,8 @@
         </button>
       </div>
     </section>
+
+    
 
     <div class="container">
       <div class="row align-items-center">
